<resources>
    <string name="app_name">Health</string>
    <string name="注册">注册</string>
    <string name="用户名">用户名:</string>
    <string name="密码">密 码:</string>
    <string name="确认密码">确认密码:</string>
    <string name="年龄">年 龄:</string>
    <string name="性别">性 别:</string>
    <string name="男">男</string>
    <string name="女">女</string>
    <string name="取消按钮">取消</string>
    <string name="提交按钮">提交</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="battery_default_value">电池电量</string>
    <string name="menu_delete">删除</string>
    <string name="title_activity_configuration">历史</string>
    <string name="no_sensor_found">扫描中。。。 </string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="arrow_image">Arrow</string>
    <string name="title_activity_peripheral">设备</string>
    <string name="title_activity_hrdemo">demo</string>
    <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>

    <string name="shortcut_dfu_short">DFU</string>
    <string name="shortcut_dfu_long">Device Firmware Update</string>
    <string name="shortcut_uart_short">UART</string>
    <string name="shortcut_uart_long">UART Service</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">取消</string>

    <string name="action_about">关于</string>
    <string name="action_connect">连接</string>
    <string name="action_select">选择设备</string>
    <string name="action_add_device">添加设备</string>
    <string name="action_connecting">连接中…</string>
    <string name="action_disconnect">断开连接</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_plugins">插件</string>
    <string name="drawer_plugin_nrf_connect">…</string>

    <string name="battery">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_ble">设备不支持蓝牙！</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="no_uri_application">There is no application that can open this URI.</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="scanner_title">选择设备:</string>
    <string name="scanner_empty">没有发现设备</string>
    <string name="scanner_action_scan">扫描</string>
    <string name="scanner_action_cancel">取消</string>
    <string name="scanner_subtitle_bonded">连接的设备:</string>
    <string name="scanner_subtitle_not_bonded">可用设备:</string>
    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>

    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>

    <string name="permission_title">Permission required</string>
    <string name="permission_sd_text">Health would like to copy some sample applications, that may be uploaded onto your nRF51 device using the DFU (Device Firmware Update), to the memory of this device. If you agree, you will be asked to give the application permission to access files on your device.</string>
    <string name="about_title">关于</string>
    <string name="about_version">\n\nVersion: %s</string>
    <string name="about_text">蓝牙连接模块.</string>
    <string name="bonding">设备绑定中...</string>
    <string name="bonded">该设备已绑定</string>
</resources>
