<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/注册"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="250dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/account"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/用户名"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="fill_parent"
                            android:layout_height="50dp" >
                        </EditText>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/密码"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="fill_parent"
                            android:layout_height="50dp" >
                        </EditText>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/确认密码"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/conpasswordET"
                            android:layout_width="fill_parent"
                            android:layout_height="50dp" >
                        </EditText>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/年龄"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/ageRegister"
                            android:layout_width="fill_parent"
                            android:layout_height="50dp" >
                        </EditText>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/性别"
                            android:textSize="15sp" />

                        <RadioGroup
                            android:id="@+id/sexRegister"
                            android:layout_width="fill_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/man"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/男"
                                android:checked="true"/>

                            <RadioButton
                                android:id="@+id/female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/女" />
                        </RadioGroup>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/canBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/取消按钮" >
                </Button>

                <Button
                    android:id="@+id/commit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/提交按钮" >
                </Button>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>